Jetty 9.4.x - Dependency Roll-Up : The Next Generation (#8857)
* Bump testcontainers.version from 1.17.3 to 1.17.5

Bumps `testcontainers.version` from 1.17.3 to 1.17.5.

Updates `testcontainers-bom` from 1.17.3 to 1.17.5
- [Release notes](https://github.com/testcontainers/testcontainers-java/releases)
- [Changelog](https://github.com/testcontainers/testcontainers-java/blob/main/CHANGELOG.md)
- [Commits](https://github.com/testcontainers/testcontainers-java/compare/1.17.3...1.17.5)

Updates `mariadb` from 1.17.3 to 1.17.5
- [Release notes](https://github.com/testcontainers/testcontainers-java/releases)
- [Changelog](https://github.com/testcontainers/testcontainers-java/blob/main/CHANGELOG.md)
- [Commits](https://github.com/testcontainers/testcontainers-java/compare/1.17.3...1.17.5)

---
updated-dependencies:
- dependency-name: org.testcontainers:testcontainers-bom
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: org.testcontainers:mariadb
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump commons-compress from 1.21 to 1.22

Bumps commons-compress from 1.21 to 1.22.

---
updated-dependencies:
- dependency-name: org.apache.commons:commons-compress
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump asm.version from 9.3 to 9.4

Bumps `asm.version` from 9.3 to 9.4.

Updates `asm` from 9.3 to 9.4

Updates `asm-commons` from 9.3 to 9.4

Updates `asm-tree` from 9.3 to 9.4

Updates `asm-analysis` from 9.3 to 9.4

Updates `asm-util` from 9.3 to 9.4

---
updated-dependencies:
- dependency-name: org.ow2.asm:asm
  dependency-type: direct:development
  update-type: version-update:semver-minor
- dependency-name: org.ow2.asm:asm-commons
  dependency-type: direct:development
  update-type: 